# PromoSearchMCP

./: README.md  pyproject.toml  requirements.txt  run_demo.py
agents/: demo_agent.py
data/: promotions.jsonl
data/embeddings/: promotion_embeddings.pkl
mcp_server/: __init__.py  main.py
mcp_server/schemas/: expand_query.schema.json  optimize_ad_slots.schema.json  rank_promotions.schema.json  search_promotions.schema.json
mcp_server/tools/: __init__.py  expand_query.py  optimize_ad_slots.py  rank_promotions.py  search_promotions.py
models/: __init__.py  embedder.py  ranker.py
tests/: test_tools.py
